# censorr

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: app_config.json  profanity_list.json
src/censorr/: pipeline.py
src/censorr/cli/: main.py
src/censorr/commands/: abstract_command.py  audio_extract.py  audio_mute.py  audio_qc.py  subtitle_extract_and_merge.py  subtitle_mask.py  subtitle_qc.py  video_remux.py
src/censorr/utils/: filesystem.py  fuzzy.py  language.py  logging.py
src/censorr/worker/: __init__.py  queue.py  worker.py
tests/censorr/cli/: test_main.py
tests/censorr/commands/: test_audio_extract.py  test_audio_mute.py  test_audio_qc.py  test_subtitle_extract_and_merge.py  test_subtitle_mask.py  test_subtitle_qc.py  test_video_remux.py
tests/censorr/pipeline/: test_pipeline.py
tests/censorr/utils/: test_fuzzy.py  test_language.py
tests/censorr/worker/: test_worker.py
